<resources>
    <string name="app_name">QuizApp</string>
    <string name="high_score">High Score : 0</string>
    <string name="app">Quiz App</string>
    <string name="start_game_button">Start Quiz</string>
    <string name="question_header">Question 1 of 10</string>
    <string name="current_score">Current Score : 0</string>
    <string name="correct_answer">Your answer is correct</string>
</resources>